--- a/archive.html
+++ b/archive.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class='dark h-full'>
+<html lang="en" class='dark h-full'>
     <head>
 <!--
 ╭━━━━┳╮╱╱╱╱╱╭━━━╮╱╱╱╭╮╱╱╱╱╱╭━╮╱╭╮
@@ -54,72 +54,9 @@
         <link as='font' crossorigin href='https://uptime.betterstack.com/fonts/Inter-Medium.woff?v=3.12' rel='preload'>
         <link href='https://uptime.betterstack.com/fonts/Inter.css' rel='stylesheet'>
         <link href='/feed' rel='alternate' title='RSS feed for incidents reported for The Daily News' type='application/rss+xml'>
-        <script>
-            (function(i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function() {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }
-                ,
-                i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            }
-            )(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-            ga('create', 'UA-752796-25', 'auto');
-
-            if (''.length > 0) {
-                ga('create', '', 'auto', 'clientTracker')
-            }
-        </script>
-        <script async='' src='https://www.googletagmanager.com/gtag/js?id=AW-10805602682'></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-            gtag('js', new Date());
-            gtag('config', 'AW-10805602682');
-        </script>
-        <script>
-            document.addEventListener("turbo:load", function(event) {
-                if (typeof ga === "function") {
-                    ga("set", "location", event.detail.url);
-
-                    if (''.length > 0) {
-                        ga('clientTracker.send', 'pageview');
-                    }
-                    return ga("send", "pageview");
-                }
-            });
-        </script>
+    
     </head>
     <body class='h-full overflow-x-hidden'>
-        <script>
-            window.cfg = {
-                "base_host": "uptime.betterstack.com",
-                "better_stack_url": "https://betterstack.com",
-                "controller": "public_status_pages",
-                "action": "show",
-                "signed_in": true,
-                "paying": true,
-                "user_email": "adh9yyyyy@gmail.com",
-                "user_timezone": "Indian/Maldives",
-                "app_version": "8b4d32c2fb190afd0833c03fbf3c2cc8149ca4ab",
-                "environment": "production",
-                "posthog": {
-                    "api_host": "https://t.betterstack.com",
-                    "api_key": "phc_Tbfg4EiRsr5iefFoth2Y1Hi3sttTeLQ5RV5TLg4hL1W",
-                    "related_domains": ["betterstack.com", "logtail.com"]
-                },
-                "ph_id": "1883e01fd0c104f-0e1ea58fb2efc-50464c68-1fa400-1883e01fd0d93a",
-                "status_page_design": "v2"
-            };
-        </script>
         <main class='h-full container mx-auto'>
             <div class='h-[50px] md:hidden'></div>
             <nav class='-mx-5 backdrop-blur bg-white/80 border-b border-statuspage-neutral-80/50 dark:bg-statuspage-neutral-900/80 dark:border-statuspage-neutral-700 fixed flex h-[50px] items-center justify-between md:h-auto md:mx-0 md:pl-0 md:relative pl-5 py-4 top-0 w-full z-30' data-controller='status-pages-v2--header'>
@@ -370,29 +307,5 @@ Humanity has achieved a historic milestone in space exploration with the success
         </main>
       
         <div id='recaptcha-wrapper'></div>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script>
-      (function() {
-        var isDevMode = /Chrome\/[0-9]+/.test(navigator.userAgent);
-
-        if (isDevMode) {
-          var xhr = new XMLHttpRequest();
-          xhr.onreadystatechange = function() {
-            if (xhr.readyState === XMLHttpRequest.DONE) {
-              if (xhr.status === 200) {
-                var readmeContent = xhr.responseText;
-                var readmeContainer = document.createElement('div');
-                readmeContainer.innerHTML = marked(readmeContent); // Use a Markdown parser library like 'marked' to render the README.md content
-                document.body.appendChild(readmeContainer);
-              }
-            }
-          };
-
-          var readmeURL = 'https://thedailynews.repl.co/readme.md'; // Replace with the actual URL of your README.md file
-          xhr.open('GET', readmeURL, true);
-          xhr.send();
-        }
-      })();
-    </script>
     </body>
 </html>
